setup for esp32-C3

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,11 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
-monitor_speed = 460800
+monitor_speed = 115200   ; 460800 needed in production if outputting!
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 460800
+; This requires serial port changes
+; [env:esp32dev]
+; platform = espressif32
+; board = esp32dev
+; framework = arduino
+; monitor_speed = 460800
